hphp/hack/test/typecheck/enum_class_label/memoized_bad_arity1.php.exp
File "memoized_bad_arity1.php", line 3, characters 25-27:
`__Memoize` takes 1 argument when using `#KeyedByIC`. (Parsing[1002])
